# instruct-tts-stabilizer

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: constraints.json  filter.json  personas.json  perturbation.json
docs/: index.html
docs/demopage/: README_demopage.md  list.jsonl
docs/demopage/voxinstruct/_meta/: synth_APS.txt  synth_DSD.txt  synth_RP.txt
examples/: README.md  audio_manifest.demo.jsonl  seed_attributes.demo.jsonl
scripts/: build_demo_page.py  build_sft_manifest.py  filter_candidates.py  generate_candidates.py  perturb_audio.py  run_eval.py  score_candidates.py
src/instruct_tts_stabilizer/: __init__.py  io_utils.py
src/instruct_tts_stabilizer/demo/: __init__.py  build_demo.py
src/instruct_tts_stabilizer/diversify/: __init__.py  generate.py  prompts.py
src/instruct_tts_stabilizer/eval/: __init__.py  text_metrics.py
src/instruct_tts_stabilizer/filter/: __init__.py  apply_filter.py  drift.py  score.py
src/instruct_tts_stabilizer/llm/: __init__.py  client.py
src/instruct_tts_stabilizer/manifests/: __init__.py  build.py
src/instruct_tts_stabilizer/perturb/: __init__.py  audio.py
tests/: test_filter.py  test_perturb.py
